k3s/manifests/actual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: actual
  annotations:
    tailscale.com/proxy-class: "prod"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  number: 5006
  tls:
    - hosts:
        - actual
